# Magellan

./: .gitignore  README.md  pyproject.toml
src/: agentic_test.py  main.py  mistral_connector.py  upfund_explorer.py
src/mistral/: chat.py  serializer.py
src/mistral_mcp/: fast_server.py  server.py
src/sample-mcp-servers/: mcp-akinator-server.py
src/sample-mcp-servers/mcp-akinator/: main.py  pyproject.toml
